# ear

./: .gitignore  Cargo.toml  mix.sh
crates/ear/: Cargo.toml
crates/ear/src/: main.rs
crates/stitch/: Cargo.toml
crates/stitch/src/: lib.rs  main.rs
crates/whisper/: Cargo.toml
crates/whisper/src/: lib.rs  main.rs
src/: main.rs
