[package]
name = "ear"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = "0.9.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5", features = ["flac"] }
tokenizers = "0.15"
tracing-subscriber = "0.3.22"
tracing-chrome = "0.7.2"
byteorder = "1.5.0"
hf-hub = "0.4.3"
rand = "0.9.2"
