[package]
name = "whisper"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = "0.9.1"
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
symphonia = { version = "0.5", default-features = false, features = ["flac"] }
tokenizers = "0.15"
tracing-subscriber = "0.3.22"
tracing-chrome = "0.7.2"
byteorder = "1.5.0"
hf-hub = "0.4.3"
rand = "0.9.2"
